<resources>
    <string name="app_name">BacaAja</string>
    <string name="articles_title">Judul Artikel</string>
    <string name="description">Deskripsi</string>
    <string name="user">User</string>
    <string name="article_content">Konten Article</string>
    <string name="share">Share</string>
    <string name="article_like">likes</string>
    <string name="article_bookmark">Bookmark</string>
    <string name="author_name">Nama Penulis</string>
    <string name="author_job">Pekerjaan Penulis</string>
    <string name="article_read_time">Waktu Baca</string>
    <string name="name">Nama</string>
    <string name="name_value">Ghazi Taqiyya Al Anshari</string>
    <string name="email">Email</string>
    <string name="email_value">taqiyyaghazi@gmail.com</string>
    <string-array name="data_title">
        <item>Fundamental Skills for becoming Performant Software Architect</item>
        <item>Idempotency Keys in RESTful APIs</item>
        <item>11 Open-Source SaaS Killer—Selfhost With Docker</item>
        <item>How Canva reduces trial cancellation</item>
        <item>Why Fast Growth Isn’t Always the Holy Grail</item>
        <item>Mastering Website Performance: Advanced Techniques for Optimizing DNS, HTTP, and Browser Caching</item>
        <item>Resolving Common Issues in Event-Driven Architecture</item>
        <item>FastAPI Best Practices and Design Patterns: Building Quality Python APIs</item>
        <item>The Ultimate Guide to Becoming a Top-Tier Freelance Web Developer</item>
        <item>10 Habits of Great Software Engineers</item>
    </string-array>
    <string-array name="data_description">
        <item>Master Plan for becoming a Software Architect</item>
        <item>Building secure APIs</item>
        <item>Selfhost Supabase, Grafana, Uptime Kuma, NocoDB, Dokku, Appwrite, N8N, Redash, Jitsi, Plausible and Nextcloud with docker</item>
        <item>A round of applause for personalisation, transparency and trust</item>
        <item>It can be one quick way to ruin a great start-up</item>
        <item>Boost Your Site Speed and User Experience with Effective Caching Strategies, DNS Optimization, and Modern Protocols</item>
        <item>Introduction</item>
        <item>In recent years, FastAPI has emerged as one of the most popular frameworks for building Python APIs thanks to its simplicity, speed and…</item>
        <item>Giving up the 9-to-5 for the freedom and flexibility of freelance work sounds extremely interesting, doesn’t it? But, before you dive…</item>
        <item>Great developers tend to have a lot of little habits that they don’t teach in Computer Science courses or web development bootcamps, and…</item>
    </string-array>
    <string-array name="data_photo">
        <item>https://miro.medium.com/v2/da:true/resize:fill:160:106/0*Xl9kecR3GVoGHEjn</item>
        <item>https://miro.medium.com/v2/da:true/resize:fill:160:106/0*Fe0kBRyNdgWGyV4c</item>
        <item>https://miro.medium.com/v2/resize:fill:160:106/1*kFosUQQC_vn4NOeZ57RYnw.png</item>
        <item>https://miro.medium.com/v2/resize:fill:160:106/1*IfN_AwqFNXTrouTTjPkHrA.png</item>
        <item>https://miro.medium.com/v2/resize:fill:160:106/1*rarN9kQWBfkRyofQq_JdkQ.jpeg</item>
        <item>https://miro.medium.com/v2/da:true/resize:fill:160:106/0*dUOjFYqMXZQl9Z8b</item>
        <item>https://miro.medium.com/v2/da:true/resize:fill:160:106/0*ef5vZOr1oEDVpi1e</item>
        <item>https://miro.medium.com/v2/resize:fill:160:106/1*KvPKKlfXds2JT4YLqXhoJg.png</item>
        <item>https://miro.medium.com/v2/resize:fill:160:106/1*6H3l3zYZVniI90vnwCqmTA.jpeg</item>
        <item>https://miro.medium.com/v2/resize:fill:160:106/g:fp:0.5:0.41/1*WDr9vT0blTQY7tfE1nMwHQ.png</item>
    </string-array>
</resources>