<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/picture_wrapper"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:elevation="10dp"
            app:cardCornerRadius="200dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/user_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/user_picture" />

        </androidx.cardview.widget.CardView>

        <TableLayout
            android:id="@+id/user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp"
                    android:text="@string/name" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:text="@string/name_value" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp"
                    android:text="@string/email" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:text="@string/email_value" />
            </TableRow>


        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>