<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="16dp"
    android:paddingVertical="10dp">

    <TextView
        android:id="@+id/article_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        tools:text="@string/article_like"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/material_dynamic_neutral50"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableLeftCompat="@drawable/baseline_favorite_24"
        app:drawableTint="@color/material_dynamic_neutral50" />

    <TextView
        android:id="@+id/article_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/material_dynamic_neutral50"
        app:drawableLeftCompat="@drawable/baseline_bookmark_24"
        android:drawablePadding="4dp"
        app:drawableTint="@color/material_dynamic_neutral50"
        app:layout_constraintBottom_toBottomOf="@+id/article_like"
        app:layout_constraintStart_toEndOf="@+id/article_like"
        app:layout_constraintTop_toTopOf="@+id/article_like"
        android:layout_marginStart="8dp"
        tools:text="@string/article_bookmark" />

    <TextView
        android:id="@+id/article_read_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/material_dynamic_neutral50"
        app:drawableLeftCompat="@drawable/baseline_access_time_filled_24"
        android:drawablePadding="4dp"
        app:drawableTint="@color/material_dynamic_neutral50"
        app:layout_constraintBottom_toBottomOf="@+id/article_bookmark"
        app:layout_constraintStart_toEndOf="@+id/article_bookmark"
        app:layout_constraintTop_toTopOf="@+id/article_bookmark"
        android:layout_marginStart="8dp"
        tools:text="@string/article_read_time" />

</androidx.constraintlayout.widget.ConstraintLayout>